Added instagram logo from FontAwesome

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/a14b555eca.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="src/portfolio.css" />
     <title>Portfolio Project</title>
   </head>
@@ -28,6 +32,7 @@
       <div class="bg-warning">
         <h1>Hello World</h1>
         <p>Welcome to my website!</p>
+        <i class="fa-brands fa-instagram"></i>
       </div>
     </div>
   </body>
