--- a/index.html
+++ b/index.html
@@ -28,12 +28,19 @@
     <title>Portfolio Project</title>
   </head>
   <body>
-    <div class="container">
-      <div class="bg-warning">
-        <h1>Hello World</h1>
-        <p>Welcome to my website!</p>
-        <i class="fa-brands fa-instagram"></i>
-      </div>
-    </div>
+    <!-- <div class="container"> -->
+        <div class="hero">
+            <p>
+                Hello, my name is
+            </p>
+            <h1>
+                Anna Dowding
+            </h1>
+            <h2>
+                Frontend Developer, based in England.
+            </h2>
+            <a href="#">Hello</a>
+        </div>
+    <!-- </div> -->
   </body>
 </html>
