Cont. integrated homepage design

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a href="#">Hello</a>
     </div>
     <div class="container">
-      
+      <p class="subheading">Featured projects:</p>
       <div class="row">
         <div class="col-6">
           <img src="images/weatherapp.png" alt="" class="img-fluid d-none d-lg-block">
