Link to about.html from index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <p class="greeting">Hello, my name is</p>
       <h1>Anna Dowding</h1>
       <h2 class="mb-5 fs-3">Frontend Developer, based in England.</h2>
-      <a href="#">Hello</a>
+      <a href="about.html">Hello</a>
     </div>
     <div class="container">
       <p class="subheading">Featured projects:</p>
