--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/portfolio.css" />
-    <title>Portfolio Project</title>
+    <title>Home Page</title>
   </head>
   <body>
     <!-- <div class="container"> -->
