Integrated design for contact.html

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                   focus
                 </p>
               </div>
-              <div class="content-button"><a href="work.html">View all projects</a></div>
+              <div class="content-button"><a href="work.html" class="link">View all projects</a></div>
             </div>
           
           <div class="col-lg-6">
