Narrowed about page top padding for small resolutions

--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
               alt=""
             />
             <h3 class="text-center m-0">World Clock App</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
           </div> 
           <div class="col-md-6 mb-4">
             <img
@@ -44,7 +44,7 @@
               alt=""
             />
             <h3 class="text-center m-0">Weather App</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
           </div> 
           <div class="col-md-6 mb-4">
             <img
