--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,8 @@
         <h3 class="m-0">Instagram</h3>
         <p class=""><a href="#" target="_blank">@anna</a></p>
             
-        </div>      
+        </div>   
+        <a href="about.html">Dummy link</a>   
           
 </body>
 </html>
