--- a/work.html
+++ b/work.html
@@ -14,12 +14,21 @@
 </head>
 <body>
     <div class="container">
-        <div class="content-header text-center">
+      <nav class="d-flex justify-content-between">
+          <img src="images/logo.png" alt="" class="logo d-none d-md-block">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li class="active"><a href="/work.html">Work</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="content-header text-center pt-5">
           <h1>Take a look at what I've been working on!</h1>
         </div>
         
           <div class="row">
-         <div class="col-md-6 mb-4">
+         <div class="col-md-6 mb-4 px-5">
             <img
               src="images/tennyson.png"
               class="img-fluid mb-3 rounded"
@@ -28,7 +37,7 @@
             <h3 class="text-center m-0">Hobby Blog</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>  
-          <div class="col-md-6 mb-4">
+          <div class="col-md-6 mb-4 px-5">
             <img
               src="images/worldclock.png"
               class="img-fluid mb-3 rounded"
@@ -37,7 +46,7 @@
             <h3 class="text-center m-0">World Clock App</h3>
             <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
           </div> 
-          <div class="col-md-6 mb-4">
+          <div class="col-md-6 mb-4 px-5">
             <img
               src="images/weatherapp.png"
               class="img-fluid mb-3 rounded"
@@ -46,7 +55,7 @@
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
           </div> 
-          <div class="col-md-6 mb-4">
+          <div class="col-md-6 mb-4 px-5">
             <img
               src="images/fiddlerontheroof.html.png"
               class="img-fluid mb-3 rounded"
