--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,17 @@
 </head>
 <body>
     <div class="container">
-        <div class="content-header pb-2">
-          <h1>Let's get in touch!</h1>
+        <nav class="d-flex justify-content-between">
+          <img src="images/logo.png" alt="" class="logo d-none d-md-block">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/work.html">Work</a></li>
+            <li class="active"><a href="/contact.html">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="content-header">
+          <h1 class="pt-5 pb-3">Let's get in touch!</h1>
         </div>
         <h3 class="m-0">Email</h3>
         <p class="pb-1"><a href="#" target="_blank">anna.dowding10@gmail.com</a></p>
@@ -25,7 +34,6 @@
         <p class=""><a href="#" target="_blank">@anna</a></p>
             
         </div>   
-        <a href="about.html">Dummy link</a>   
           
 </body>
 </html>
