--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/portfolio.css">
 
-    <title>My Work</title>
+    <title>Work</title>
 </head>
 <body>
     <div class="container">
