Uniform content header margin on all pages except home

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
           </ul>
         </nav>
         <div class="content-header">
-          <h1 class="pt-5 pb-3">Let's get in touch!</h1>
+          <h1 class="pb-3">Let's get in touch!</h1>
         </div>
         <h3 class="m-0">Email</h3>
         <p class="pb-1"><a href="#" target="_blank">anna.dowding10@gmail.com</a></p>
