--- a/work.html
+++ b/work.html
@@ -23,7 +23,7 @@
             <li><a href="/contact.html">Contact</a></li>
           </ul>
         </nav>
-        <div class="content-header text-center pt-5">
+        <div class="content-header text-center">
           <h1>Take a look at what I've been working on!</h1>
         </div>
         
