Integrated footer design

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,11 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <script
+      src="https://kit.fontawesome.com/a14b555eca.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="src/portfolio.css">
 
     <title>Contact Me</title>
@@ -32,7 +37,21 @@
         <p class="pb-1"><a href="#" target="_blank">@anna</a></p>
         <h3 class="m-0">Instagram</h3>
         <p class=""><a href="#" target="_blank">@anna</a></p>
-            
+            <footer>
+      <a href="mailto:anna.dowding10@gmail.com" class="email-link">anna.dowding10@gmail.com</a>
+      <br>
+      <div class="d-flex justify-content-center">
+        <a href="https://github.com/annadowding" class="social-icon" target="_blank">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="" class="social-icon" target="_blank">
+          <i class="fa-brands fa-x-twitter"></i>
+        </a>
+        <a href="" class="social-icon" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+      </div>
+    </footer>
         </div>   
           
 </body>
