--- a/about.html
+++ b/about.html
@@ -9,6 +9,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="src/portfolio.css">
+
+    <script
+      src="https://kit.fontawesome.com/a14b555eca.js"
+      crossorigin="anonymous"
+    ></script>
     <title>About Me</title>
   </head>
   <body>
@@ -52,6 +57,21 @@
           </div>
           
         </div>
+        <footer>
+      <a href="mailto:anna.dowding10@gmail.com" class="email-link">anna.dowding10@gmail.com</a>
+      <br>
+      <div class="d-flex justify-content-center">
+        <a href="https://github.com/annadowding" class="social-icon" target="_blank">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="" class="social-icon" target="_blank">
+          <i class="fa-brands fa-x-twitter"></i>
+        </a>
+        <a href="" class="social-icon" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+      </div>
+    </footer>
     </div>
   </body>
 </html>
