--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             class="img-fluid d-none d-lg-block"
           />
         </div>
-        <div class="col-6 app-content p-5">
+        <div class="col-6 app-content">
           <h2 class="mb-5">Tennyson Blog</h2>
           <p class="mb-5 text-muted">
             Far far away, behind the word mountains, far from the countries
@@ -67,7 +67,7 @@
       </div>
 
       <div class="row">
-        <div class="col-6 app-content p-5">
+        <div class="col-6 app-content">
           <h2 class="mb-5">Weather App</h2>
           <p class="mb-5 text-muted">
             Far far away, behind the word mountains, far from the countries
@@ -106,6 +106,21 @@
         </div>
       </div>
     </div>
+    <footer>
+      <a href="mailto:anna.dowding10@gmail.com" class="email-link">anna.dowding10@gmail.com</a>
+      <br>
+      <div class="d-flex justify-content-center">
+        <a href="https://github.com/annadowding" class="social-icon" target="_blank">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="" class="social-icon" target="_blank">
+          <i class="fa-brands fa-x-twitter"></i>
+        </a>
+        <a href="" class="social-icon" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+      </div>
+    </footer>
     <!-- </div> -->
   </body>
 </html>
