--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Anns is a front-end developer based in London, England. You can find her work open-sourced on GiHub and hosted on Netlify.">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,7 +31,7 @@
   <body>
     <!-- <div class="container"> -->
       <nav class="d-flex justify-content-between">
-          <img src="images/logo.png" alt="" class="logo d-none d-md-block">
+          <a href="/" title="Homepage"><img src="images/logo.png" alt="she codes logo" class="logo d-none d-md-block"/></a>
           <ul>
             <li class="active"><a href="/">Home</a></li>
             <li><a href="/about.html">About</a></li>
@@ -50,7 +51,7 @@
         <div class="col-6">
           <img
             src="images/weatherapp.png"
-            alt=""
+            alt="Anna's weather app preview"
             class="img-fluid d-none d-lg-block"
           />
         </div>
@@ -80,7 +81,7 @@
         <div class="col-6">
           <img
             src="images/weatherapp.png"
-            alt=""
+            alt="Anna's weather app"
             class="img-fluid d-none d-lg-block"
           />
         </div>
@@ -90,7 +91,7 @@
         <div class="col-6">
           <img
             src="images/weatherapp.png"
-            alt=""
+            alt="Anna's front-end local city weather project"
             class="img-fluid d-none d-lg-block"
           />
         </div>
@@ -113,13 +114,8 @@
         <a href="https://github.com/annadowding" class="social-icon" target="_blank">
           <i class="fa-brands fa-github"></i>
         </a>
-        <a href="" class="social-icon" target="_blank">
-          <i class="fa-brands fa-x-twitter"></i>
-        </a>
-        <a href="" class="social-icon" target="_blank">
-          <i class="fa-brands fa-instagram"></i>
-        </a>
       </div>
+        <p class="text-center">This project was coded by Anna and is <a href="https://github.com/annadowding/portfolio-project">open-sourced</a></p>
     </footer>
     <!-- </div> -->
   </body>
