--- a/work.html
+++ b/work.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="descrption" conten="Anna's work is made using HTML, CSS and JavaScript. Take a look at her work and projects. These examples of her front-end development work are open-sourced on GitHub and hosted on Netlify too.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +21,7 @@
 <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-          <img src="images/logo.png" alt="" class="logo d-none d-md-block">
+          <a href="/" title="Homepage"><img src="images/logo.png" alt="she codes logo" class="logo d-none d-md-block"/></a>
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/about.html">About</a></li>
@@ -37,7 +38,7 @@
             <img
               src="images/tennyson.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Anna's hobby project front-end about Alfred, Lord Tennyson"
             />
             <h3 class="text-center m-0">Hobby Blog</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
@@ -46,7 +47,7 @@
             <img
               src="images/worldclock.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Anna's world clock project preview"
             />
             <h3 class="text-center m-0">World Clock App</h3>
             <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
@@ -55,7 +56,7 @@
             <img
               src="images/weatherapp.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Anna's weaher app"
             />
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
@@ -64,7 +65,7 @@
             <img
               src="images/fiddlerontheroof.html.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Anna's fiddler on the roof project"
             />
             <h3 class="text-center m-0">Fiddler on the Roof Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
@@ -76,13 +77,8 @@
         <a href="https://github.com/annadowding" class="social-icon" target="_blank">
           <i class="fa-brands fa-github"></i>
         </a>
-        <a href="" class="social-icon" target="_blank">
-          <i class="fa-brands fa-x-twitter"></i>
-        </a>
-        <a href="" class="social-icon" target="_blank">
-          <i class="fa-brands fa-instagram"></i>
-        </a>
       </div>
+        <p class="text-center">This project was coded by Anna and is <a href="https://github.com/annadowding/portfolio-project">open-sourced</a></p>
     </footer>  
         </div>      
           
