Integrated footer bar

--- a/about.html
+++ b/about.html
@@ -19,16 +19,16 @@
   </head>
   <body>
 
+    <nav class="d-flex justify-content-between">
+     <a href="/" title="Homepage"><img src="images/anna.png" alt="she codes logo" class="logo"/></a>
+     <ul>
+       <li><a href="/">Home</a></li>
+       <li class="active"><a href="/about.html">About</a></li>
+       <li><a href="/work.html">Work</a></li>
+       <li><a href="/contact.html">Contact</a></li>
+     </ul>
+   </nav>
       <div class="container">
-        <nav class="d-flex justify-content-between">
-          <a href="/" title="Homepage"><img src="images/logo.png" alt="she codes logo" class="logo d-none d-md-block"/></a>
-          <ul>
-            <li><a href="/" title="Homepage">Home</a></li>
-            <li class="active"><a href="/about.html" title="About Anna">About</a></li>
-            <li><a href="/work.html" title="Anna's work">Work</a></li>
-            <li><a href="/contact.html" title="Contact Anna">Contact</a></li>
-          </ul>
-        </nav>
       </div>
         <div class="row">
 
@@ -59,6 +59,21 @@
           
         </div>
         <footer>
+          <div class="contact-box d-flex justify-content-between d-none d-lg-flex">
+                    <div>
+                        <h4>
+                            Work inquiry
+                        </h4>
+                        <p class="text-muted">
+                            Let's work together
+                        </p>
+                    </div>
+                    <div class="pt-3 button">
+                        <a href="" class="link">
+                            Contact Me
+                        </a>
+                    </div>
+                </div>
       <a href="mailto:anna.dowding10@gmail.com" class="email-link" title="Anna's email address">anna.dowding10@gmail.com</a>
       <br>
       <div class="d-flex justify-content-center">
