--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <!-- <div class="container"> -->
       <nav class="d-flex justify-content-between">
-          <a href="/" title="Homepage"><img src="images/logo.png" alt="she codes logo" class="logo d-none d-md-block"/></a>
+          <a href="/" title="Homepage"><img src="images/anna.png" alt="she codes logo" class="logo"/></a>
           <ul>
             <li class="active"><a href="/">Home</a></li>
             <li><a href="/about.html">About</a></li>
@@ -108,6 +108,21 @@
       </div>
     </div>
     <footer>
+      <div class="contact-box d-flex justify-content-between d-none d-lg-flex">
+                    <div>
+                        <h4>
+                            Work inquiry
+                        </h4>
+                        <p class="text-muted">
+                            Let's work together
+                        </p>
+                    </div>
+                    <div class="pt-3 button">
+                        <a href="" class="link">
+                            Contact Me
+                        </a>
+                    </div>
+                </div>
       <a href="mailto:anna.dowding10@gmail.com" class="email-link">anna.dowding10@gmail.com</a>
       <br>
       <div class="d-flex justify-content-center">
