--- a/work.html
+++ b/work.html
@@ -19,16 +19,16 @@
     <title>Work</title>
 </head>
 <body>
+  <nav class="d-flex justify-content-between">
+      <a href="/" title="Homepage"><img src="images/anna.png" alt="she codes logo" class="logo"/></a>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li class="active"><a href="/work.html">Work</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+      </ul>
+    </nav>
     <div class="container">
-      <nav class="d-flex justify-content-between">
-          <a href="/" title="Homepage"><img src="images/logo.png" alt="she codes logo" class="logo d-none d-md-block"/></a>
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li class="active"><a href="/work.html">Work</a></li>
-            <li><a href="/contact.html">Contact</a></li>
-          </ul>
-        </nav>
         <div class="content-header text-center">
           <h1>Take a look at what I've been working on!</h1>
         </div>
@@ -71,6 +71,21 @@
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div> 
           <footer>
+            <div class="contact-box d-flex justify-content-between d-none d-lg-flex">
+                    <div>
+                        <h4>
+                            Work inquiry
+                        </h4>
+                        <p class="text-muted">
+                            Let's work together
+                        </p>
+                    </div>
+                    <div class="pt-3 button">
+                        <a href="" class="link">
+                            Contact Me
+                        </a>
+                    </div>
+                </div>
       <a href="mailto:anna.dowding10@gmail.com" class="email-link">anna.dowding10@gmail.com</a>
       <br>
       <div class="d-flex justify-content-center">
