Fixed homepage links

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             live in Bookmarksgrove right at the coast of the Semantics, a large
             language ocean. A small river named Duden flows by
           </p>
-          <button class="btn">View detail project</button>
+          <button class="btn"><a href="https://www.shecodes.io/cohorts/shecodes-basics-add-on-d71f9a0f-7191-48de-a601-d313642f4bf7/projects/1962490">View detail project</a></button>
         </div>
       </div>
 
@@ -76,7 +76,7 @@
             live in Bookmarksgrove right at the coast of the Semantics, a large
             language ocean. A small river named Duden flows by
           </p>
-          <button class="btn">View detail project</button>
+          <button class="btn"><a href="https://mycityforecastapp.netlify.app">View detail project</a></button>
         </div>
         <div class="col-6">
           <img
@@ -103,7 +103,7 @@
             live in Bookmarksgrove right at the coast of the Semantics, a large
             language ocean. A small river named Duden flows by
           </p>
-          <button class="btn">View detail project</button>
+          <button class="btn"><a href="https://english-poem-generator.netlify.app">View detail project</a></button>
         </div>
       </div>
     </div>
