--- a/about.html
+++ b/about.html
@@ -82,8 +82,7 @@
         </a>
         
       </div>
-      <p class="text-center">This project was coded by Anna and is <a href="https://github.com/annadowding/portfolio-project">open-sourced</a></p>
-    </footer>
+ <p class="text-center">✌️ This project was coded by Anna and is <a href="https://github.com/annadowding/portfolio-project">open-sourced</a></p>    </footer>
     </div>
   </body>
 </html>
