--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="row">
         <div class="col-6">
           <img
-            src="images/weatherapp.png"
+            src="images/tennyson2.png"
             alt="Anna's weather app preview"
             class="img-fluid d-none d-lg-block"
           />
@@ -63,7 +63,7 @@
             live in Bookmarksgrove right at the coast of the Semantics, a large
             language ocean. A small river named Duden flows by
           </p>
-          <button class="btn"><a href="https://www.shecodes.io/cohorts/shecodes-basics-add-on-d71f9a0f-7191-48de-a601-d313642f4bf7/projects/1962490">View detail project</a></button>
+          <button class="btn"><a href="https://www.shecodes.io/cohorts/shecodes-basics-add-on-d71f9a0f-7191-48de-a601-d313642f4bf7/projects/1962490" target="_blank">View project</a></button>
         </div>
       </div>
 
@@ -76,7 +76,7 @@
             live in Bookmarksgrove right at the coast of the Semantics, a large
             language ocean. A small river named Duden flows by
           </p>
-          <button class="btn"><a href="https://mycityforecastapp.netlify.app">View detail project</a></button>
+          <button class="btn"><a href="https://mycityforecastapp.netlify.app" target="_blank">View project</a></button>
         </div>
         <div class="col-6">
           <img
@@ -90,7 +90,7 @@
       <div class="row m-3">
         <div class="col-6">
           <img
-            src="images/weatherapp.png"
+            src="images/.png"
             alt="Anna's front-end local city weather project"
             class="img-fluid d-none d-lg-block"
           />
@@ -103,7 +103,7 @@
             live in Bookmarksgrove right at the coast of the Semantics, a large
             language ocean. A small river named Duden flows by
           </p>
-          <button class="btn"><a href="https://english-poem-generator.netlify.app">View detail project</a></button>
+          <button class="btn"><a href="https://my-world-clock-application.netlify.app/" target="_blank">View project</a></button>
         </div>
       </div>
     </div>
@@ -118,7 +118,7 @@
                         </p>
                     </div>
                     <div class="pt-3 button">
-                        <a href="" class="link">
+                        <a href="/contact.html" class="link">
                             Contact Me
                         </a>
                     </div>
