--- a/work.html
+++ b/work.html
@@ -81,7 +81,7 @@
                         </p>
                     </div>
                     <div class="pt-3 button">
-                        <a href="" class="link">
+                        <a href="/contact.html" class="link">
                             Contact Me
                         </a>
                     </div>
