--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                         </p>
                     </div>
                     <div class="pt-3 button">
-                        <a href="" class="link">
+                        <a href="/contact.html" class="link">
                             Contact Me
                         </a>
                     </div>
