Updated images on home page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="col-6">
           <img
             src="images/tennyson2.png"
-            alt="Anna's weather app preview"
+            alt="Anna's hobby blog"
             class="img-fluid d-none d-lg-block"
           />
         </div>
@@ -90,8 +90,8 @@
       <div class="row m-3">
         <div class="col-6">
           <img
-            src="images/.png"
-            alt="Anna's front-end local city weather project"
+            src="images/worldclock.png"
+            alt="Anna's world clocks javascript project"
             class="img-fluid d-none d-lg-block"
           />
         </div>
