Updated project info

--- a/about.html
+++ b/about.html
@@ -38,19 +38,16 @@
                   <h1>Hi I am Anna Dowding</h1>
                 </div>
                 <div class="content-subtitle">
-                    <h3>Frontend Developer, based in England.</h3>
+                    <h3>Frontend Developer, based in London.</h3>
                   </strong>
                 </div>
                 <div class="content-paragraph mb-5 ">
                   <p>
-                    For anyone who wants to start learning code, this workshop is very
-                    interesting. You will be challenged with different exercises, and
-                    everything is well explained, homework and deadlines are good for keep
-                    focus
+                    I’m currently seeking new opportunities in front-end development. I’m highly skilled in JavaScript and React. I love strawberries and frosty mornings. 
                   </p>
               
               </div>
-              <div class="content-button mb-5"><a href="work.html" class="link" title="View Anna's front-end projects">View all projects</a></div>
+              <div class="content-button mb-5"><a href="work.html" class="link" title="View Anna's front-end projects">View example projects</a></div>
             </div>
           </div>
           <div class="col-lg-6">
