--- a/work.html
+++ b/work.html
@@ -35,40 +35,48 @@
         
           <div class="row">
          <div class="col-md-6 mb-4 px-5">
-            <img
-              src="images/tennyson.png"
-              class="img-fluid mb-3 rounded"
-              alt="Anna's hobby project front-end about Alfred, Lord Tennyson"
-            />
-            <h3 class="text-center m-0">Hobby Blog</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <a href="https://annadowding-travel-website-project.netlify.app/">
+              <img
+                src="images/woolacombe-website.png"
+                class="img-fluid mb-3 rounded"
+                alt="Anna's travel website project"
+              />
+            </a>
+            <h3 class="text-center m-0">Travel Website Project</h3>
+            <p class="text-center text-muted">Built with HTML and advanced CSS.</p>
           </div>  
           <div class="col-md-6 mb-4 px-5">
-            <img
-              src="images/worldclock.png"
-              class="img-fluid mb-3 rounded"
-              alt="Anna's world clock project preview"
-            />
+            <a href="https://my-world-clock-application.netlify.app/">
+              <img
+                src="images/worldclock.png"
+                class="img-fluid mb-3 rounded"
+                alt="Anna's world clock project preview"
+              />
+            </a>
             <h3 class="text-center m-0">World Clock App</h3>
             <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
           </div> 
           <div class="col-md-6 mb-4 px-5">
-            <img
-              src="images/weatherapp.png"
-              class="img-fluid mb-3 rounded"
-              alt="Anna's weaher app"
-            />
+            <a href="https://mycityforecastapp.netlify.app/">
+              <img
+                src="images/weatherapp.png"
+                class="img-fluid mb-3 rounded"
+                alt="Anna's weaher app"
+              />
+            </a>
             <h3 class="text-center m-0">Weather App</h3>
-            <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
+            <p class="text-center text-muted">Built using HTML, an active API, and advanced CSS and JavaScript</p>
           </div> 
           <div class="col-md-6 mb-4 px-5">
-            <img
-              src="images/fiddlerontheroof.html.png"
-              class="img-fluid mb-3 rounded"
-              alt="Anna's fiddler on the roof project"
-            />
-            <h3 class="text-center m-0">Fiddler on the Roof Project</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <a href="https://annadowding-dictionary-react-app.netlify.app/">
+              <img
+                src="images/dictionary-app.png"
+                class="img-fluid mb-3 rounded"
+                alt="Anna's fiddler on the roof project"
+              />
+            </a>
+            <h3 class="text-center m-0">Dictionary App</h3>
+            <p class="text-center text-muted">Built using HTML, an active API, advanced CSS, and React</p>
           </div> 
           <footer>
             <div class="contact-box d-flex justify-content-between d-none d-lg-flex">
