Updated social icons

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="content-paragraph mb-5 ">
                   <p>
-                    I’m currently seeking new opportunities in front-end development. I’m highly skilled in JavaScript and React. I love strawberries and frosty mornings. 
+                    I'm passionate about making the world a better place and always doing my best. I’m currently seeking new opportunities in front-end development. I like to work with JavaScript and ReactJS. I love strawberries and frosty mornings. 
                   </p>
               
               </div>
@@ -77,7 +77,9 @@
         <a href="https://github.com/annadowding" class="social-icon" target="_blank" title="Anna's github profile">
           <i class="fa-brands fa-github"></i>
         </a>
-        
+        <a href="https://www.linkedin.com/in/anna-dowding-110673120/" target="_blank" class="social-icon">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
       </div>
  <p class="text-center">✌️ This project was coded by Anna and is <a href="https://github.com/annadowding/portfolio-project">open-sourced</a></p>    </footer>
     </div>
