--- a/work.html
+++ b/work.html
@@ -100,6 +100,9 @@
         <a href="https://github.com/annadowding" class="social-icon" target="_blank">
           <i class="fa-brands fa-github"></i>
         </a>
+        <a href="https://www.linkedin.com/in/anna-dowding-110673120/" target="_blank" class="social-icon">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
       </div>
          <p class="text-center">✌️ This project was coded by Anna and is <a href="https://github.com/annadowding/portfolio-project">open-sourced</a></p>
     </footer>  
