--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                   </p>
               
               </div>
-              <div class="content-button mb-5"><a href="work.html" class="link" title="View Anna's front-end projects">View example projects</a></div>
+              <div class="content-button mb-5"><a href="https://www.shecodes.io/graduates/105874-anna-dowding" class="link" title="View Anna's front-end projects">View all my SheCodes projects</a></div>
             </div>
           </div>
           <div class="col-lg-6">
