--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <a href="about.html" class="link">Hello</a>
     </div>
     <div class="container">
-      <p class="subheading">Check out some of my featured project below</p>
+      <p class="subheading">Check out some of my featured projects below</p>
 
       <div class="row">
         <div class="col-6 app-content">
