--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Anns is a front-end developer based in London, London. You can find her work open-sourced on GiHub and hosted on Netlify.">
+    <meta name="description" content="Anns is a front-end developer based in London. You can find her work open-sourced on GiHub and hosted on Netlify.">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -42,7 +42,7 @@
     <div class="hero">
       <p class="greeting">Hello, my name is</p>
       <h1>Anna Dowding</h1>
-      <h2 class="mb-5 fs-3">Frontend Developer, based in England.</h2>
+      <h2 class="mb-5 fs-3">Frontend Developer, based in London.</h2>
       <a href="about.html" class="link">Hello</a>
     </div>
     <div class="container">
