--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Anns is a front-end developer based in London. You can find her work open-sourced on GiHub and hosted on Netlify.">
+    <meta name="description" content="Anna is a front-end developer based in London. You can find her work open-sourced on GiHub and hosted on Netlify.">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -52,13 +52,13 @@
         <div class="col-6 app-content">
           <h2 class="mb-5">Weather App</h2>
           <p class="mb-5 text-muted">
-            Here I used adavanced JavaScript techniques to build my first interactive application. During this advanced 3-week course, I learned how to integrate a live API to fetch live data, and used Git, Github and Netlify to professionally manage my code.
+            Vanilla JavaScript to build this repsonsive weather application with forecast. The live weather data is from Open Weather API. I am using GitHub and Netlify to manage and host my code. 
           </p>
-          <button class="btn"><a href="https://mycityforecastapp.netlify.app" target="_blank">View project</a></button>
+          <button class="btn"><a href="https://annadowding-vanilla-js-weather-app.netlify.app/" target="_blank">View project</a></button>
         </div>
         <div class="col-6">
           <img
-            src="images/weatherapp.png"
+            src="images/vanilla-js-weather-app.png"
             alt="Anna's weather app"
             class="img-fluid d-none d-lg-block"
           />
@@ -77,7 +77,7 @@
         <div class="col-6 app-content">
           <h2 class="mb-5">Travel Website Project</h2>
           <p class="mb-5 text-muted">
-            This responsive multi-page website project inegrates more sophisticated responsive design techniques into my code, as well as more advanced CSS techniques. I became adept in real-life development workflow as I made this based on a Figma design file. This project put my skills to the test - minimal use of Bootstrap to add the responsiveness. 
+            For this multi-page website I used mainly pure CSS to make it responsive. Bootstrap was used only minimally. 
           </p>
           <button class="btn"><a href="https://annadowding-travel-website-project.netlify.app/" target="_blank">View project</a></button>
         </div>
@@ -89,7 +89,7 @@
         <div class="col-6 app-content p-5">
           <h2 class="mb-5 dictionary-app">Dictionary App Project</h2>
           <p class="mb-5 text-muted">
-            I immersed myself in React development in SheCodes React. Using React and other popular coding tools such as VS Code, I built a fully functioning dictionary app. I used an API to build the project, GitHub to host my code, and Bootstrap to create layouts. 
+            Here is my main React.js project. I used VS Code editor to write my code. Compared to my travel website, I used Bootstrap much more heavily to manage its layout. 
           </p>
           <button class="btn"><a href="https://annadowding-dictionary-react-app.netlify.app/" target="_blank">View project</a></button>
         </div>
@@ -112,7 +112,7 @@
         <div class="col-6 app-content">
           <h2 class="mb-5">World Clock Project</h2>
           <p class="mb-5 text-muted">
-            Building on my JavaScript skills, through the week-long SheCodes Plus, I built this world clock app. Importantly, this project opened up my mind to the potential of advanced JavaScript whilst incorporating best practices for my coding workflow.
+            I also used vanilla JavaScript to make this World Clock app. 
           </p>
           <button class="btn"><a href="https://my-world-clock-application.netlify.app/" target="_blank">View project</a></button>
         </div>
