Link to new build weather app

--- a/work.html
+++ b/work.html
@@ -57,9 +57,9 @@
             <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
           </div> 
           <div class="col-md-6 mb-4 px-5">
-            <a href="https://mycityforecastapp.netlify.app/">
+            <a href="https://annadowding-vanilla-js-weather-app.netlify.app/">
               <img
-                src="images/weatherapp.png"
+                src="images/vanilla-js-weather-app.png"
                 class="img-fluid mb-3 rounded"
                 alt="Anna's weaher app"
               />
