Fixed responsiveness and linked titles

--- a/index.html
+++ b/index.html
@@ -48,19 +48,21 @@
     <div class="container">
       <p class="subheading">Check out some of my featured projects below</p>
 
-      <div class="row">
+      <div class="row practice">
         <div class="col-6 app-content">
-          <h2 class="mb-5">Weather App</h2>
-          <p class="mb-5 text-muted">
+          <a href="https://annadowding-vanilla-js-weather-app.netlify.app">
+            <h2 class="mb-5">Weather App</h2>
+          </a>
+          <p class="mb-5 text-muted d-none d-lg-block">
             Vanilla JavaScript to build this repsonsive weather application with forecast. The live weather data is from Open Weather API. I am using GitHub and Netlify to manage and host my code. 
           </p>
-          <button class="btn"><a href="https://annadowding-vanilla-js-weather-app.netlify.app/" target="_blank">View project</a></button>
+          <button class="btn d-none d-sm-block"><a href="https://annadowding-vanilla-js-weather-app.netlify.app/" target="_blank">View project</a></button>
         </div>
         <div class="col-6">
           <img
             src="images/vanilla-js-weather-app.png"
             alt="Anna's weather app"
-            class="img-fluid d-none d-lg-block"
+            class="img-fluid"
           />
         </div>
       </div>
@@ -70,51 +72,57 @@
           <img
             src="images/woolacombe-website.png"
             alt="Travel Website Project"
-            class="img-fluid d-none d-lg-block"
+            class="img-fluid"
           />
         </div>
         
         <div class="col-6 app-content">
-          <h2 class="mb-5">Travel Website Project</h2>
-          <p class="mb-5 text-muted">
+          <a href="https://annadowding-travel-website-project.netlify.app">
+            <h2 class="mb-5">Travel Website Project</h2>
+          </a>
+          <p class="mb-5 text-muted d-none d-lg-block">
             For this multi-page website I used mainly pure CSS to make it responsive. Bootstrap was used only minimally. 
           </p>
-          <button class="btn"><a href="https://annadowding-travel-website-project.netlify.app/" target="_blank">View project</a></button>
+          <button class="btn d-none d-sm-block"><a href="https://annadowding-travel-website-project.netlify.app/" >View project</a></button>
         </div>
       </div>
 
 
 
-      <div class="row m-3">
+      <div class="row m-3 practise">
         <div class="col-6 app-content p-5">
-          <h2 class="mb-5 dictionary-app">Dictionary App Project</h2>
-          <p class="mb-5 text-muted">
+          <a href="https://annadowding-dictionary-react-app.netlify.app">
+            <h2 class="mb-5 dictionary-app">React.js Dictionary</h2>
+          </a>
+          <p class="mb-5 text-muted d-none d-lg-block">
             Here is my main React.js project. I used VS Code editor to write my code. Compared to my travel website, I used Bootstrap much more heavily to manage its layout. 
           </p>
-          <button class="btn"><a href="https://annadowding-dictionary-react-app.netlify.app/" target="_blank">View project</a></button>
+          <button class="btn d-none d-sm-block"><a href="https://annadowding-dictionary-react-app.netlify.app/" target="_blank">View project</a></button>
         </div>
         <div class="col-6">
           <img
             src="images/dictionary-app.png"
             alt="React Dictionary App Project"
-            class="img-fluid d-none d-lg-block"
+            class="img-fluid dictionary-app"
           />
         </div>
 </div>
          <div class="row">
         <div class="col-6">
           <img
-            src="images/worldclock.png"
+            src="images/vanilla-js-clock-app.png"
             alt="World Clock Project"
-            class="img-fluid d-none d-lg-block"
+            class="img-fluid d-lg-block"
           />
         </div>
         <div class="col-6 app-content">
-          <h2 class="mb-5">World Clock Project</h2>
-          <p class="mb-5 text-muted">
+          <a href="https://annadowding-vanilla-js-clock-app.netlify.app">
+            <h2 class="mb-5">World Clock Project</h2>
+          </a>
+          <p class="mb-5 text-muted d-none d-lg-block">
             I also used vanilla JavaScript to make this World Clock app. 
           </p>
-          <button class="btn"><a href="https://my-world-clock-application.netlify.app/" target="_blank">View project</a></button>
+          <button class="btn d-none d-sm-block"><a href="https://annadowding-vanilla-js-clock-app.netlify.app/" target="_blank">View project</a></button>
         </div>
       </div>
         
