--- a/work.html
+++ b/work.html
@@ -46,9 +46,9 @@
             <p class="text-center text-muted">Built with HTML and advanced CSS.</p>
           </div>  
           <div class="col-md-6 mb-4 px-5">
-            <a href="https://my-world-clock-application.netlify.app/">
+            <a href="https://annadowding-vanilla-js-clock-app.netlify.app/">
               <img
-                src="images/worldclock.png"
+                src="images/vanilla-js-clock-app.png"
                 class="img-fluid mb-3 rounded"
                 alt="Anna's world clock project preview"
               />
