Reordered projects and uploaded image

--- a/work.html
+++ b/work.html
@@ -67,17 +67,44 @@
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">Built using HTML, an active API, and advanced CSS and JavaScript</p>
           </div> 
+
           <div class="col-md-6 mb-4 px-5">
             <a href="https://annadowding-dictionary-react-app.netlify.app/">
               <img
                 src="images/dictionary-app.png"
                 class="img-fluid mb-3 rounded"
-                alt="Anna's fiddler on the roof project"
+                alt="Anna's dictionary"
               />
             </a>
-            <h3 class="text-center m-0">Dictionary App</h3>
-            <p class="text-center text-muted">Built using HTML, an active API, advanced CSS, and React</p>
+            <h3 class="text-center m-0">React Dictionary App</h3>
+            <p class="text-center text-muted">Built using HTML, an active API, advanced CSS, and React.js</p>
           </div> 
+
+          <div class="col-md-6 mb-4 px-5">
+            <a href="https://anna-dowding-react-weather-app.netlify.app/">
+              <img
+                src="images/react-js-weather-app.png"
+                class="img-fluid mb-3 rounded"
+                alt="Anna's React Weather App"
+              />
+            </a>
+            <h3 class="text-center m-0">React Weather App</h3>
+            <p class="text-center text-muted">Built using React.js</p>
+          </div> 
+
+          
+          <div class="col-md-6 mb-4 px-5">
+            <a href="https://annadowding-ai-horoscope.netlify.app/">
+              <img
+                src="images/ai-horoscope-generator.png"
+                class="img-fluid mb-3 rounded"
+                alt="Anna's React Weather App"
+              />
+            </a>
+            <h3 class="text-center m-0">AI Horoscope Generator</h3>
+            <p class="text-center text-muted">Built using Open-source AI and JavaScript</p>
+          </div> 
+
           <footer>
             <div class="contact-box d-flex justify-content-between d-none d-lg-flex">
                     <div>
