--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="hero">
       <p class="greeting">Hello, my name is</p>
       <h1>Anna Dowding</h1>
-      <h2 class="mb-5 fs-3">Frontend Developer, based in London.</h2>
+      <h2 class="mb-5 fs-3">Aspiring Web Developer based in London.</h2>
       <a href="about.html" class="link">Hello</a>
     </div>
     <div class="container">
