Updated email link

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
               <h1 class="pb-3">Let's get in touch!</h1>
             </div>
             <h3 class="m-0">Email</h3>
-            <p class="pb-1"><a href="mailto@anna.dowding10@gmail.com" target="_blank">anna.dowding10@gmail.com</a></p>
+            <p class="pb-1"><a href="mailto@anna.rachel.dowding@gmail.com" target="_blank">anna.rachel.dowding@gmail.com</a></p>
             <h3 class="m-0">GitHub</h3>
             <p class="pb-1"><a href="https://github.com/annadowding" target="_blank">Anna's GitHub profile</a></p>
         </div>
