Updated contact details and summary

--- a/about.html
+++ b/about.html
@@ -38,12 +38,12 @@
                   <h1>Hi I am Anna Dowding</h1>
                 </div>
                 <div class="content-subtitle">
-                    <h3>Frontend Developer, based in London.</h3>
+                    <h3>Aspiring Web Developer based in London.</h3>
                   </strong>
                 </div>
                 <div class="content-paragraph mb-5 ">
                   <p>
-                    I'm passionate about making the world a better place and always doing my best. I’m currently seeking new opportunities in front-end development. I like to work with JavaScript and ReactJS. I love strawberries and frosty mornings. 
+                    I am passionate about personal development and making the world a better place. Currently learning C#, I have most experience making frontends using JavaScript.
                   </p>
               
               </div>
@@ -71,7 +71,7 @@
                         </a>
                     </div>
                 </div>
-      <a href="mailto:anna.dowding10@gmail.com" class="email-link" title="Anna's email address">anna.dowding10@gmail.com</a>
+      <a href="mailto:anna.rachel.dowding@gmail.com" class="email-link" title="Anna's email address">anna.rachel.dowding@gmail.com</a>
       <br>
       <div class="d-flex justify-content-center">
         <a href="https://github.com/annadowding" class="social-icon" target="_blank" title="Anna's github profile">
