--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         </a>
                     </div>
                 </div>
-      <a href="mailto:anna.dowding10@gmail.com" class="email-link">anna.dowding10@gmail.com</a>
+      <a href="mailto:anna.rachel.dowding@gmail.com" class="email-link">anna.rachel.dowding@gmail.com</a>
       <br>
       <div class="d-flex justify-content-center">
         <a href="https://github.com/annadowding" class="social-icon" target="_blank">
