--- a/work.html
+++ b/work.html
@@ -38,41 +38,41 @@
             <a href="https://annadowding-travel-website-project.netlify.app/">
               <img
                 src="images/woolacombe-website.png"
-                class="img-fluid mb-3 rounded"
+                class="img-fluid mb-4 rounded"
                 alt="Anna's travel website project"
               />
             </a>
-            <h3 class="text-center m-0">Travel Website Project</h3>
+            <h3 class="text-center m-0">Multi-page Responsive Holiday Site</h3>
             <p class="text-center text-muted">Built with HTML and advanced CSS.</p>
           </div>  
           <div class="col-md-6 mb-4 px-5">
             <a href="https://annadowding-vanilla-js-clock-app.netlify.app/">
               <img
                 src="images/vanilla-js-clock-app.png"
-                class="img-fluid mb-3 rounded"
+                class="img-fluid mb-4 rounded"
                 alt="Anna's world clock project preview"
               />
             </a>
-            <h3 class="text-center m-0">World Clock App</h3>
+            <h3 class="text-center m-0">React.js City Time App</h3>
             <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
           </div> 
           <div class="col-md-6 mb-4 px-5">
             <a href="https://annadowding-vanilla-js-weather-app.netlify.app/">
               <img
                 src="images/vanilla-js-weather-app.png"
-                class="img-fluid mb-3 rounded"
-                alt="Anna's weaher app"
+                class="img-fluid rounded"
+                alt="Anna's weather app"
               />
             </a>
-            <h3 class="text-center m-0">Weather App</h3>
-            <p class="text-center text-muted">Built using HTML, an active API, and advanced CSS and JavaScript</p>
+            <h3 class="text-center m-0">Vanilla JS Weather App</h3>
+            <p class="text-center text-muted mb-5">Built using HTML, an active API, and advanced CSS and JavaScript</p>
           </div> 
 
           <div class="col-md-6 mb-4 px-5">
             <a href="https://annadowding-dictionary-react-app.netlify.app/">
               <img
                 src="images/dictionary-app.png"
-                class="img-fluid mb-3 rounded"
+                class="img-fluid mb-4 rounded"
                 alt="Anna's dictionary"
               />
             </a>
@@ -81,15 +81,15 @@
           </div> 
 
           <div class="col-md-6 mb-4 px-5">
-            <a href="https://anna-dowding-react-weather-app.netlify.app/">
+            <a href="https://annadowding-vanilla-js-weather-app.netlify.app/">
               <img
                 src="images/react-js-weather-app.png"
                 class="img-fluid mb-3 rounded"
                 alt="Anna's React Weather App"
               />
             </a>
-            <h3 class="text-center m-0">React Weather App</h3>
-            <p class="text-center text-muted">Built using React.js</p>
+            <h3 class="text-center m-0">React.js World Weather App</h3>
+            <p class="text-center text-muted">Built using React.js and NPM</p>
           </div> 
 
           
@@ -121,7 +121,7 @@
                         </a>
                     </div>
                 </div>
-      <a href="mailto:anna.dowding10@gmail.com" class="email-link">anna.dowding10@gmail.com</a>
+      <a href="mailto:anna.rachel.dowding@gmail.com" class="email-link">anna.rachel.dowding@gmail.com</a>
       <br>
       <div class="d-flex justify-content-center">
         <a href="https://github.com/annadowding" class="social-icon" target="_blank">
