--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
           <i class="fa-brands fa-linkedin"></i>
         </a>
       </div>
- <p class="text-center">✌️ This project was coded by Anna and is <a href="https://github.com/annadowding/portfolio-project">open-sourced</a></p>    </footer>
+ <p class="text-center">✌️ This project was coded by Anna Dowding and is <a href="https://github.com/annadowding/portfolio-project">open-sourced</a></p>    </footer>
         </div>   
           
 </body>
