Updated project image

--- a/work.html
+++ b/work.html
@@ -81,7 +81,7 @@
           </div> 
 
           <div class="col-md-6 mb-4 px-5">
-            <a href="https://annadowding-vanilla-js-weather-app.netlify.app/">
+            <!-- <a href="https://annadowding-vanilla-js-weather-app.netlify.app/"> -->
               <img
                 src="images/react-js-weather-app.png"
                 class="img-fluid mb-3 rounded"
@@ -98,7 +98,7 @@
               <img
                 src="images/ai-horoscope-generator.png"
                 class="img-fluid mb-3 rounded"
-                alt="Anna's React Weather App"
+                alt="Anna's AI Horoscope Generator App"
               />
             </a>
             <h3 class="text-center m-0">AI Horoscope Generator</h3>
