--- a/work.html
+++ b/work.html
@@ -88,8 +88,8 @@
                 alt="Anna's React Weather App"
               />
             </a>
-            <h3 class="text-center m-0">React.js World Weather App</h3>
-            <p class="text-center text-muted">Built using React.js and NPM</p>
+            <h3 class="text-center mt-1">React.js World Weather App</h3>
+            <p class="text-center text-muted mb-4">Built using React.js and NPM</p>
           </div> 
 
           
