--- a/work.html
+++ b/work.html
@@ -81,7 +81,7 @@
           </div> 
 
           <div class="col-md-6 mb-4 px-5">
-            <a https://github.com/annadowding/react-js-weather-app-2">
+            <a href=https://github.com/annadowding/react-js-weather-app-2">
               <img
                 src="images/react-js-weather-app.png"
                 class="img-fluid mb-3 rounded"
